--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: build_host_github_pages
-description: An example project to Build and Host Flutter Web on to GitHub Pages and using a secret key
+description: An example project to Build and Host Flutter Web on to GitHub Pages and use of secret keys.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
